@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST umodpack-0.5b16-allinone.tar.gz 3605080 RMD160 9305ad118a68ab2dab9849ad017f408f10e26e6d SHA1 c0623ccfa5521031e8dd6c7c0cb78e20f9a2191a SHA256 e4b291c333812efba65277feff45d7da132515a7945780f7df3b127793f9dedd
-EBUILD umodpack-0.5_beta16-r1.ebuild 1141 RMD160 b82d469ee130297132718e2f0dfbd6c2d3275126 SHA1 241a8c02c2f37fd77cb12f03a1ec3b40dfe290cb SHA256 bf3e004c17659b664dcee7473355cdae770b13ce2a0c728e210d339022a4ce59
-MISC ChangeLog 1394 RMD160 88b97114235731f9905d0d164a9dc21c6e8a345a SHA1 d166c7fd430082e782400144476a7dd6aba7c3eb SHA256 d2640c1d01026b828ac4cebad0194ecd10610a9d5b16e57489482cfbe28a4183
+EBUILD umodpack-0.5_beta16-r1.ebuild 1139 RMD160 b2448bbc7f30ae6164b936abfeed477f35db0526 SHA1 5557013a10823c07e9519cef2d91e954fb834595 SHA256 7d98f829f0523e5d0e0fcea663e635139e2023efbd65a8f294d7d97028ed9365
+MISC ChangeLog 1513 RMD160 37c7e1c20b09dc00a3c2cdfa95c738b4d3ed790c SHA1 ccccb3c262d02c1077665a0a36dd6c33e786257b SHA256 d928ad411ce2014cb7372687e18be2e418f5626803a5e1cbfedb0f14c3cca058
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkki57YACgkQV3J2n04EauwraACgx2Um/KGxcL6J4sfPD9rzP9dw
-5hEAoMVis86UoZyaSY5PK3Wtn+Z/yCOG
-=7zMB
+iEYEARECAAYFAkpjXNQACgkQV3J2n04EauwWiACdGtn+uTWL1lq2oEgcoQ3Lw8hb
+PpAAn2R8vsa04Z1zRl21CBivi4Eq+80t
+=BGnw
 -----END PGP SIGNATURE-----
