@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-util/cvs-repo/gentoo-x86/games-util/umodpack/umodpack-0.5_beta16-r1.ebuild,v 1.6 2008/11/18 16:05:26 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-util/cvs-repo/gentoo-x86/games-util/umodpack/umodpack-0.5_beta16-r1.ebuild,v 1.7 2009/07/19 17:50:03 tove Exp $
 
 inherit perl-module toolchain-funcs
 
@@ -15,7 +15,7 @@ KEYWORDS="amd64 ppc x86"
 IUSE="tk"
 
 DEPEND="dev-lang/perl
-	virtual/perl-Compress-Zlib
+	virtual/perl-IO-Compress
 	dev-perl/Archive-Zip
 	dev-perl/Tie-IxHash
 	tk? ( dev-perl/perl-tk )"
