@@ -1,6 +1,10 @@
 # ChangeLog for games-util/umodpack
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-util/cvs-repo/gentoo-x86/games-util/umodpack/ChangeLog,v 1.10 2008/11/18 16:05:26 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/games-util/cvs-repo/gentoo-x86/games-util/umodpack/ChangeLog,v 1.11 2009/07/19 17:50:03 tove Exp $
+
+  19 Jul 2009; Torsten Veller <tove@gentoo.org>
+  umodpack-0.5_beta16-r1.ebuild:
+  IO-Compress replaces Compress-Zlib
 
   18 Nov 2008; Torsten Veller <tove@gentoo.org>
   umodpack-0.5_beta16-r1.ebuild:
